[package]
name = "nightcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dasp = { version = "0.11.0", features = ["interpolate", "interpolate-sinc", "ring_buffer", "signal"] }
hound = "3.5.0"
rodio = {version = "0.17.1", features = ["symphonia-all"] }
rubato = "0.12.0"
rustfft = "6.1.0"
symphonia = { version = "0.5.2", features = ["wav", "mp3"] }
